Version ClaSS-1.0.45 release (2013/04/14)
-------------------------------------------

The previous school field added to the entrybook new_student form.

The teacher names added to group_list printing in Admin.

New script to export a remittance's fees grouped by concept.

Fix to list_student_teachers.

Added a shortcut button to edit the medical page in InfoBook.


Version ClaSS-1.0.44 release (2013/04/02)
-------------------------------------------

Rounded button corners with CSS3.

Moved the documentdrop init function into the host.

The file table now has owner type 'c' for community.

The list_section function can optionally include "Whole School".

The staff_list page has document a drop area for each section.

Renamed and fixed get_residence_perm.

New fuction to list yeargroups associated to a course.

Re-worked report_reports and report_attendance to filter by
permissions.

Added the option for class/lesson attendance reporting to the existing
session attendance in report_attendance.


Version ClaSS-1.0.43 release (2013/03/28)
-------------------------------------------

New Register script for reporting lesson attendance.

Moved the dateDiff function out to the main functions lib.

New geocoding javascript for a route map on the contact_details page.

The medbook can list all new (applied students).

Made SEN status and Medical status fields which can be set in EntryBook.

Shortened the Entrybook form for an enquiry.

Moved all generate_epfusername calls to a dedicated function
new_epfusername which takes care of checking for uniqueness.

Change the use of css background-image to content for compatibility
with Chrome.

Made use of the displayfield's data type in the student_list for
sorting dates and ages etc.

Fixed the identification profile_bid in the class_view_table for
profiles qith bid=% (profiles extending across subjects).



Version ClaSS-1.0.42 release (2013/03/04)
-------------------------------------------
